# sitk-rs

./: .gitignore  Cargo.toml  README.md  doc-warns.txt  doc-warns2.txt  doc-warns3.txt  doc-warns4.txt
bench/: compare.py  (+1 more)
bench/cpp/: .gitignore  CMakeLists.txt  README.md  main.cxx
crates/sitk/: Cargo.toml
crates/sitk-cuda/: Cargo.toml
crates/sitk-cuda/src/: backend.rs  buffer.rs  error.rs  host.rs  image.rs  lib.rs  mask.rs  pinned.rs
crates/sitk-cuda/src/ops/: correlation.rs  device.rs  gaussian.rs  histogram.rs  mattes.rs  mean_squares.rs  mod.rs  pyramid.rs  rescale_intensity.rs  resident.rs
crates/sitk-cuda/tests/: device_mask.rs  metric_precision.rs  ncc_metric.rs  rescale_into.rs  sampled_metric.rs
crates/sitk-filters/: Cargo.toml
crates/sitk-filters/benches/: bench_ops.rs
crates/sitk-filters/benches/bench_ops/: checksum.rs  ops.rs  schema.rs  synth.rs
crates/sitk-filters/examples/: fault_probe.rs  fft_probe.rs
crates/sitk-filters/src/: adaptive_histogram_equalization.rs  anisotropic_diffusion.rs  attribute_morphology.rs  binary_morphology.rs  bspline_decomposition.rs  canny.rs  chan_vese.rs  change_label.rs  clamp.rs  coherence_enhancing_diffusion.rs  colliding_fronts.rs  complex.rs  contour.rs  contour_extractor_2d.rs  convolution.rs  deconvolution.rs  denoise.rs  dicom_orient.rs  displacement_field.rs  distance.rs  edge.rs  error.rs  expand.rs  fast_marching.rs  fast_marching_base.rs  fast_marching_upwind_gradient.rs  fft.rs  fft_correlation.rs  fft_shift.rs  fourier.rs  functor.rs  geodesic_morphology.rs  geometry.rs  gradient.rs  grid_utility.rs  hash.rs  histogram.rs  histogram_matching.rs  intensity.rs  join_series.rs  (+52 more)
crates/sitk-filters/src/demons/: common.rs  diffeomorphic.rs  esm.rs  fast_symmetric.rs  field.rs  geometry.rs  image_function.rs  level_set_motion.rs  mod.rs  symmetric.rs  tests.rs
crates/sitk-filters/src/displacement_field/: inverse.rs  invert.rs  iterative_inverse.rs  jacobian_determinant.rs
crates/sitk-filters/src/level_set/: anti_alias.rs  function.rs  grid.rs  mod.rs  sparse_field.rs
crates/sitk-filters/src/n4_bias_field/: bspline.rs
crates/sitk-filters/tests/: bench_correctness_gate.rs  bit_parity.rs  connected_component_mask.rs  cuda_rescale_intensity.rs  physical_space_precondition.rs  threshold_bin_range.rs  threshold_mask.rs
crates/sitk-io/: Cargo.toml
crates/sitk-io/src/: compression.rs  dicom.rs  error.rs  gipl.rs  image_hdf5.rs  image_io.rs  image_series_reader.rs  image_series_writer.rs  jpeg.rs  lib.rs  meta_image.rs  nifti.rs  nrrd.rs  png.rs  reader.rs  tiff.rs  transform_hdf5.rs  transform_io.rs  transform_matlab.rs  vtk.rs  writer.rs
crates/sitk-io/tests/: compression.rs
crates/sitk-registration/: Cargo.toml
crates/sitk-registration/examples/: execute_bench.rs  full_pipeline.rs  metric_curve.rs  metric_layout.rs  reg_bench.rs  resident_chain.rs  resident_pipeline.rs  scale_probe.rs
crates/sitk-registration/src/: ants_correlation.rs  bspline_initializer.rs  centered_versor.rs  correlation.rs  cuda.rs  demons.rs  device.rs  eigen.rs  error.rs  gradient_free.rs  initializer.rs  joint_histogram.rs  landmark.rs  lbfgs2.rs  lbfgsb.rs  lib.rs  mattes.rs  method.rs  metric.rs  optimizer.rs  scales.rs
crates/sitk-registration/tests/: cuda_boundary.rs  cuda_correlation.rs  cuda_mean_squares.rs  cuda_point_map.rs  device_pipeline.rs  histogram_determinism.rs  joint_histogram_mask.rs  mattes_device.rs  mattes_mask.rs  pyramid_parity.rs  pyramid_precision.rs  upload_cast.rs
crates/sitk-registration/tests/support/: mod.rs
crates/sitk/benches/: bench_ops.rs
crates/sitk/benches/bench_ops/: checksum.rs  ops.rs  synth.rs
crates/sitk/examples/: execute_bench.rs  fault_probe.rs  fft_probe.rs  full_pipeline.rs  metric_curve.rs  metric_layout.rs  reg_bench.rs  resident_chain.rs  resident_pipeline.rs  scale_probe.rs
crates/sitk/src/: lib.rs
crates/sitk/src/core/: alloc.rs  boundary.rs  compensated.rs  coord.rs  error.rs  fused.rs  image.rs  label_map.rs  matrix.rs  mod.rs  neighborhood.rs  ops.rs  parallel.rs  pixel.rs
crates/sitk/src/cuda/: backend.rs  buffer.rs  error.rs  image.rs  mask.rs  mod.rs  pinned.rs
crates/sitk/src/filters/: adaptive_histogram_equalization.rs  anisotropic_diffusion.rs  attribute_morphology.rs  binary_morphology.rs  bspline_decomposition.rs  canny.rs  chan_vese.rs  change_label.rs  clamp.rs  coherence_enhancing_diffusion.rs  colliding_fronts.rs  complex.rs  contour.rs  contour_extractor_2d.rs  convolution.rs  deconvolution.rs  denoise.rs  dicom_orient.rs  displacement_field.rs  distance.rs  edge.rs  error.rs  expand.rs  fast_marching.rs  fast_marching_base.rs  fast_marching_upwind_gradient.rs  fft.rs  fft_correlation.rs  fft_shift.rs  fourier.rs  functor.rs  geodesic_morphology.rs  geometry.rs  gradient.rs  grid_utility.rs  hash.rs  histogram.rs  histogram_matching.rs  intensity.rs  join_series.rs  (+52 more)
crates/sitk/src/io/: compression.rs  dicom.rs  error.rs  gipl.rs  image_hdf5.rs  image_io.rs  image_series_reader.rs  image_series_writer.rs  jpeg.rs  meta_image.rs  mod.rs  nifti.rs  nrrd.rs  png.rs  reader.rs  tiff.rs  transform_hdf5.rs  transform_io.rs  transform_matlab.rs  vtk.rs  writer.rs
crates/sitk/src/registration/: ants_correlation.rs  bspline_initializer.rs  centered_versor.rs  convergence.rs  correlation.rs  cuda.rs  demons.rs  device.rs  eigen.rs  error.rs  gradient_free.rs  initializer.rs  joint_histogram.rs  landmark.rs  lbfgs2.rs  lbfgsb.rs  mattes.rs  method.rs  metric.rs  mod.rs  optimizer.rs  scales.rs
crates/sitk/tests/: bench_correctness_gate.rs  bit_parity.rs  compression.rs  connected_component_mask.rs  cuda_boundary.rs  cuda_correlation.rs  cuda_mean_squares.rs  cuda_point_map.rs  cuda_rescale_intensity.rs  device_mask.rs  device_pipeline.rs  histogram_determinism.rs  joint_histogram_mask.rs  mattes_device.rs  mattes_mask.rs  metric_precision.rs  ncc_metric.rs  physical_space_precondition.rs  pipeline.rs  pyramid_parity.rs  pyramid_precision.rs  rescale_into.rs  sampled_metric.rs  threshold_bin_range.rs  threshold_mask.rs  upload_cast.rs
(+389 files in other folders)
