[workspace]
resolver = "2"
members = [
    "crates/sitk-core",
    "crates/sitk-io",
    "crates/sitk-filters",
    "crates/sitk-transform",
    "crates/sitk-registration",
    "crates/sitk",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/pls2-controls/sitk-rs"
description = "A pure-Rust port of SimpleITK"

[workspace.dependencies]
sitk-core = { path = "crates/sitk-core", version = "0.0.1" }
sitk-io = { path = "crates/sitk-io", version = "0.0.1" }
sitk-filters = { path = "crates/sitk-filters", version = "0.0.1" }
sitk-transform = { path = "crates/sitk-transform", version = "0.0.1" }
sitk-registration = { path = "crates/sitk-registration", version = "0.0.1" }
thiserror = "2.0"
