[workspace]
resolver = "2"
members = ["crates/sitk"]

[workspace.package]
version = "0.0.2"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/physwkim/sitk-rs"
description = "A pure-Rust port of SimpleITK"

[workspace.dependencies]
thiserror = "2.0"
# Deterministic CPU parallelism. Every parallel loop in the port goes through
# `crate::core::parallel`, whose API admits no float reduction, so no filter
# module can reach `par_iter().sum()` and re-associate a float fold. See
# `crates/sitk/src/core/parallel.rs`.
rayon = "1.10"
# `madvise` only, used at exactly one call site (`crate::core::alloc`), whose
# advice is advisory: every failure path there falls back to the plain
# allocation. See `crates/sitk/src/core/alloc.rs`.
libc = "0.2"
# Pure-Rust zlib/gzip. `default-features = false` + `rust_backend` pins the
# miniz_oxide implementation and keeps every C-binding backend (`zlib-sys`,
# `zlib-ng`, `libz-rs`) out of the tree — ledger §5.8, §5.17.
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
