[package]
name = "sitk-cuda"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Optional CUDA backend for sitk-rs"

[features]
# Default OFF. Without it this crate compiles to an empty lib with no
# dependencies, so a feature-off workspace build is the build it was before the
# crate existed: no cudarc, no sitk-core edge, no tests.
default = []
cuda = ["dep:cudarc", "dep:sitk-core", "dep:thiserror"]

[dependencies]
sitk-core = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
# `dynamic-loading`: cudarc dlopens libcuda / libnvrtc at *runtime*. No
# build-time C linkage, no *-sys crate, no nvcc build step — the only exception
# to the pure-Rust policy (ledger §5.8), and a missing driver degrades to "no
# device" (CPU fallback) instead of a link error.
#
# `cuda-13000` selects the driver/NVRTC ABI cudarc binds against; the installed
# toolkit is 13.0.2.
cudarc = { version = "0.19", default-features = false, features = [
    "std",
    "driver",
    "nvrtc",
    "cuda-13000",
    "dynamic-loading",
], optional = true }
