[package]
name = "sitk-filters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Image filters for sitk-rs"

# No `cuda` feature: the filter API is CPU-only by decision. The GPU
# per-pixel op that used to live behind one was measured slower than the CPU at
# every volume size (doc/bench-results.md) and removed, dispatch and all, so
# this crate has no edge to `sitk-cuda` to gate.

[dependencies]
sitk-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Statistics/timing engine for the doc/bench-spec.md benchmark harness.
# `harness = false` below: `benches/bench_ops.rs` is a plain `fn main()` that
# drives `criterion::Criterion` directly (not the `criterion_group!`/
# `criterion_main!` macros) so it can read each run's `estimates.json` back
# and emit the spec's NDJSON schema instead of criterion's own CLI report.
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `t1`/`tN` build one rayon pool per (op, size, config) with
# `ThreadPoolBuilder`/`.install`, reused across every criterion sample for
# that measurement -- `sitk_core::parallel::with_threads` builds a fresh pool
# per call, which would put pool construction inside the timed region. This
# is dev-only (bench harness setup, not a filter), so it does not touch the
# `parallel.rs` invariant that only `sitk-core` reaches `par_iter()` in
# production code.
rayon.workspace = true

[[bench]]
name = "bench_ops"
harness = false
