[package]
name = "sitk-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Image and transform file IO for sitk-rs (MetaImage, Insight legacy transforms)"

[dependencies]
sitk-core.workspace = true
sitk-transform.workspace = true
thiserror.workspace = true
flate2.workspace = true
# Pure-Rust HDF5 (superblock/heap/btree writer + reader), used by
# `transform_hdf5` for `.h5` / `.hdf5` transform files. The C-binding `hdf5`
# crate is deliberately not used — ledger §5.8. `deflate` is the crate's
# default feature and rides on the same flate2/miniz_oxide backend as
# `crate::compression`.
rust-hdf5 = "0.3"
