[package]
name = "sitk-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Image and transform file IO for sitk-rs (MetaImage, Insight legacy transforms)"

[dependencies]
sitk-core.workspace = true
sitk-transform.workspace = true
thiserror.workspace = true
flate2.workspace = true
# Pure-Rust HDF5 (superblock/heap/btree writer + reader), used by
# `transform_hdf5` for `.h5` / `.hdf5` transform files. The C-binding `hdf5`
# crate is deliberately not used — ledger §5.8. `deflate` is the crate's
# default feature and rides on the same flate2/miniz_oxide backend as
# `crate::compression`.
rust-hdf5 = "0.3"
# Pure-Rust PNG decoding/encoding, used by the `png` module for `.png` image
# IO. Default features only: `fdeflate` for the write-side deflate and
# `miniz_oxide` (via `flate2`) for the read side — no `*-sys` crate enters the
# tree (verified with `cargo tree`) — ledger §5.8.
png = "0.18"
# Pure-Rust TIFF decoding/encoding, used by the `tiff` module for
# `.tif` / `.tiff` image IO in place of libtiff, which `itk::TIFFImageIO` links
# — no `*-sys` crate enters the tree (verified with `cargo tree -p sitk-io`:
# only `fax`, `flate2`, `half`, `quick-error`, `weezl` and `zune-jpeg` are
# pulled in) — ledger §5.8. The crate reads LZW, Deflate and PackBits, which
# covers every compressor `TIFFImageIO` can write; what it cannot express —
# palette images and libtiff's `TIFFReadRGBAImageOriented` fallback — is
# refused rather than approximated (ledger §4.94, §4.96).
tiff = "0.11"
