[package]
name = "sitk-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Image and transform file IO for sitk-rs (MetaImage, Insight legacy transforms)"

[dependencies]
sitk-core.workspace = true
sitk-transform.workspace = true
thiserror.workspace = true
flate2.workspace = true
# Pure-Rust HDF5 (superblock/heap/btree writer + reader), used by
# `transform_hdf5` for `.h5` / `.hdf5` transform files. The C-binding `hdf5`
# crate is deliberately not used — ledger §5.8. `deflate` is the crate's
# default feature and rides on the same flate2/miniz_oxide backend as
# `crate::compression`.
rust-hdf5 = "0.3"
# Pure-Rust PNG decoding/encoding, used by the `png` module for `.png` image
# IO. Default features only: `fdeflate` for the write-side deflate and
# `miniz_oxide` (via `flate2`) for the read side — no `*-sys` crate enters the
# tree (verified with `cargo tree`) — ledger §5.8.
png = "0.18"
# Pure-Rust JPEG decoding/encoding, used by the `jpeg` module for `.jpg`
# image IO. Both crates are `#![forbid(unsafe_code)]`/`#![deny(unsafe_code)]`
# safe Rust with no `*-sys` crate in the tree (verified with `cargo tree`) —
# ledger §5.8/§5.26. `jpeg-decoder`'s default `rayon` feature (multithreaded
# decode) is dropped — this crate has no use for it and it is the one feature
# that would otherwise pull in a large extra dependency graph.
jpeg-encoder = "0.6.1"
jpeg-decoder = { version = "0.3.2", default-features = false }
# Pure-Rust TIFF decoding/encoding, used by the `tiff` module for
# `.tif` / `.tiff` image IO in place of libtiff, which `itk::TIFFImageIO` links
# — no `*-sys` crate enters the tree (verified with `cargo tree -p sitk-io`:
# only `fax`, `flate2`, `half`, `quick-error`, `weezl` and `zune-jpeg` are
# pulled in) — ledger §5.8. The crate reads LZW, Deflate and PackBits, which
# covers every compressor `TIFFImageIO` can write; what it cannot express —
# palette images and libtiff's `TIFFReadRGBAImageOriented` fallback — is
# refused rather than approximated (ledger §4.100, §4.102).
tiff = "0.11"
# Pure-Rust DICOM parsing, used by the `dicom` module to read `.dcm` files in
# place of GDCM, which `itk::GDCMImageIO` links — no `*-sys` crate enters the
# tree (verified with `cargo tree -p sitk-io`: only `byteordered`, `chrono`,
# `encoding`, `safe-transmute`, `smallvec`, `snafu` and `tracing` are pulled
# in) — ledger §5.8(a). `deflate` adds Deflated Explicit VR Little Endian,
# which rides on the same `flate2`/`miniz_oxide` backend as
# `crate::compression`. Every *encapsulated* transfer syntax is refused rather
# than decoded, because GDCM's pixel output for those is libijg/openjpeg's
# bit-for-bit and no pure-Rust codec reproduces it — ledger §4.106.
#
# `dicom-pixeldata` is deliberately *not* a dependency: it exists to decode
# encapsulated pixel data, which this module refuses, and its `native` feature
# rewrites the photometric interpretation of every 3-sample frame to `RGB`,
# which `GDCMImageIO` does not do.
dicom-object = { version = "0.10", default-features = false, features = ["deflate"] }
dicom-core = { version = "0.10", default-features = false }
dicom-dictionary-std = { version = "0.10", default-features = false }
